--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Bhupender(Divine-Arrow)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.3.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
