--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
